fix ingredients items overlaping navbar in home page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -780,6 +780,15 @@ select {
 .bottom-0 {
   bottom: 0px;
 }
+.z-10 {
+  z-index: 10;
+}
+.z-50 {
+  z-index: 50;
+}
+.z-auto {
+  z-index: auto;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -882,6 +891,10 @@ select {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
